# CHIP-boot-repair

./: .gitignore  CMakeLists.txt  Linux-i686.Toolchain.cmake  README.md  build.sh  setup.sh
assets/: changelog  chip-boot-repair-pkexec  chip-boot-repair.desktop  com.ubuntu.pkexec.chip-boot-repair.policy
include/: ConsoleRepairView.h  GtkRepairView.h  RepairObserver.h  RepairTool.h  libsunxi.h
payload/: padded-uboot  uboot.cmds  uboot.scr
src/: GtkRepairView.cpp  RepairTool.cpp  fel.c  libsunxi.cpp
